--- a/README.org
+++ b/README.org
@@ -42,6 +42,12 @@ binding.
 | =SPC w d=            | Delete window                    |
 | =M-1, M-2, M-3, ...= | Focus on given window            |
 
+* Editing
+
+| Command | Notes                            |
+|---------+----------------------------------|
+| =C-x u= | Show the undo-tree visualization |
+|         |                                  |
 
 * Search
 
