Search & Edit multiple files with Consult

--- a/README.org
+++ b/README.org
@@ -210,7 +210,17 @@ levels & filetags).
 |           |                           |
 
 * Replacing text in several files
+** With Consult
+To replace all occurrences of foo with bar in your current project:
 
+ 1. Initiate a search with =SPC s f=
+ 2. Open =embark-act= with =M-o=
+ 3. Go in edit mode with =SPC m w=
+ 4. Do the changes you want
+ 5. Save changes in all affected files with =C-x C-s=
+ 6. Or cancel all changes with =C-c C-k=
+
+** With Helm
 To replace all occurrences of foo with bar in your current project:
 
  1. Initiate a search with =SPC /= (in a project)
