--- a/README.org
+++ b/README.org
@@ -182,6 +182,17 @@ levels & filetags).
 | =​, i l= | Add a link for the highlighted text |
 |         |                                     |
 
+** Motion
+| Command   | Notes                                                                                                    |
+|-----------+----------------------------------------------------------------------------------------------------------|
+| =C-c C-n= | Move to next visible header                                                                              |
+| =C-c C-p= | Move to previous visible header                                                                          |
+| =C-c s=   | Search to go to a specific header. Need to use Consult. Note that this is a key-binding I created referring =consult-org-heading= |
+** Visibility
+| Commands | Notes                                                                         |
+|----------+-------------------------------------------------------------------------------|
+| =Tab=    | Local cycling of sub-headers when the cursor point to a header                |
+| =S-Tab=  | Global cycling of all headers in the buffer when the cursor point to a header |
 * =python-mode=
 
 | Command | Notes |
